@@ -1,12 +1,12 @@
 package ru.xiitori.crudservice.security;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import ru.xiitori.crudservice.models.Client;
 
 import java.util.Collection;
-import java.util.List;
-
+import java.util.Collections;
 
 public class ClientDetails implements UserDetails {
 
@@ -18,7 +18,7 @@ public class ClientDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(client.getRole()));
     }
 
     @Override
